--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -515,10 +515,11 @@ jobs:
               
               print("✅ Processed as plain text")
               
-          except Exception as e:
-              print(f"❌ Error processing content: {e}")
+          except Exception as e:              print(f"❌ Error processing content: {e}")
               sys.exit(1)
-          EOF          echo "Final documentation files created:"
+          EOF
+          
+          echo "Final documentation files created:"
           ls -la docs-md/
           echo "Preview of main documentation:"
           head -30 docs-md/f1-strat-manager-complete.md
